crates/macro_tests/tests/fail/references/output-with-proxy-reference.stderr
error[E0308]: mismatched types
 --> tests/fail/references/output-with-proxy-reference.rs:4:10
  |
4 | #[derive(LuaProxy, Reflect, Clone)]
  |          ^^^^^^^^
  |          |
  |          expected `MyStruct`, found `&MyStruct`
  |          arguments to this function are incorrect
  |
note: associated function defined here
 --> tests/fail/references/output-with-proxy-reference.rs:5:1
  |
5 | #[proxy(functions[
  | ^
  = note: this error originates in the derive macro `LuaProxy` which comes from the expansion of the macro `bevy_script_api::make_script_wrapper` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/fail/references/output-with-proxy-reference.rs:4:10
  |
4 | #[derive(LuaProxy, Reflect, Clone)]
  |          ^^^^^^^^
  |          |
  |          expected `&LuaMyStruct`, found `LuaMyStruct`
  |          expected due to this
  |
  = note: this error originates in the derive macro `LuaProxy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&LuaMyStruct: TealMultiValue` is not satisfied
 --> tests/fail/references/output-with-proxy-reference.rs:4:10
  |
4 | #[derive(LuaProxy, Reflect, Clone)]
  |          ^^^^^^^^ the trait `ToTypename` is not implemented for `&LuaMyStruct`, which is required by `&LuaMyStruct: TealMultiValue`
  |
  = help: the trait `ToTypename` is implemented for `LuaMyStruct`
  = note: required for `&LuaMyStruct` to implement `TealMultiValue`
note: required by a bound in `bevy_mod_scripting_lua::tealr::mlu::TealDataMethods::add_function`
 --> $CARGO/tealr-0.9.1/src/mlu/teal_data_methods.rs
  |
  |     fn add_function<S, A, R, F>(&mut self, name: &S, function: F)
  |        ------------ required by a bound in this associated function
...
  |         R: ToLuaMulti<'lua> + TealMultiValue,
  |                               ^^^^^^^^^^^^^^ required by this bound in `TealDataMethods::add_function`
  = note: this error originates in the derive macro `LuaProxy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&LuaMyStruct: IntoLuaMulti<'lua>` is not satisfied
 --> tests/fail/references/output-with-proxy-reference.rs:4:10
  |
4 | #[derive(LuaProxy, Reflect, Clone)]
  |          ^^^^^^^^ the trait `LuaUserData` is not implemented for `&LuaMyStruct`, which is required by `&LuaMyStruct: IntoLuaMulti<'lua>`
  |
  = help: the trait `LuaUserData` is implemented for `LuaMyStruct`
  = note: required for `&LuaMyStruct` to implement `IntoLua<'_>`
  = note: required for `&LuaMyStruct` to implement `IntoLuaMulti<'lua>`
note: required by a bound in `bevy_mod_scripting_lua::tealr::mlu::TealDataMethods::add_function`
 --> $CARGO/tealr-0.9.1/src/mlu/teal_data_methods.rs
  |
  |     fn add_function<S, A, R, F>(&mut self, name: &S, function: F)
  |        ------------ required by a bound in this associated function
...
  |         R: ToLuaMulti<'lua> + TealMultiValue,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `TealDataMethods::add_function`
  = note: this error originates in the derive macro `LuaProxy` (in Nightly builds, run with -Z macro-backtrace for more info)
